# cpp_project_template

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp_integration_tests.yml  to-do_check.sh  to-do_check.yml
.github/workflows/scripts/: to-do_check.sh
doc/: vcpkg_instructions.txt
src/: main.cpp
